--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -91,7 +91,7 @@ test:
     - pyshp
     - scikit-learn
     - sympy
-    #- ipywidgets_bokeh >=1.0.0
+    - ipywidgets_bokeh >=1.0.0
     - ipywidgets >=7.5.0
     #- ipyvolume
     #- ipyleaflet
