--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -93,7 +93,7 @@ test:
     - sympy
     - ipywidgets_bokeh >=1.0.0
     - ipywidgets >=7.5.0
-    #- ipyvolume
+    - ipyvolume
     #- ipyleaflet
 
   commands:
